# iterable-subprocess

./: README.md  iterable_subprocess.py  pyproject.toml  setup.py  test.py  test_iterable_subprocess.py
.circleci/: config.yml
.github/workflows/: test.yml
