[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iterable-subprocess"
version = "0.0.0.dev0"
authors = [
  { name="Department for International Trade", email="sre@digital.trade.gov.uk" },
]
description = "Communicate with a subprocess using iterables: for when data is too big to fit in memory and has to be streamed"
readme = "README.md"
requires-python = ">=3.6.7"
classifiers = [
	'Programming Language :: Python :: 3',
	'License :: OSI Approved :: MIT License',
]

[project.optional-dependencies]
dev = [
    "psutil",
    "pytest-cov",
]

[project.urls]
"Source" = "https://github.com/uktrade/iterable-subprocess"

[tool.hatch.build]
include = [
  "iterable_subprocess.py"
]
